2008-11-08  Luca Bruno  <lethalman88@gmail.com>

	* src/uimisc.c (ui_base_dialog): reorder actions as per HIG
	(ui_usercfg_window): pack help button as secondary button

	* src/vgl-main-window.c (about_dialog_uri_hook): added, both
	handles emails and urls
	(show_about_dialog): add global about dialog hooks if GIO is
	available

	* src/util.c (launch_url): added

	* configure.ac: check for GIO as optional dependency

	* src/vgl-main-window.c (create_main_menu):
	Use ui_menu_item_create_from_icon
	Reorganize Actions menu items
	(vgl_main_window_toggle_visibility): present() when not is_active()

	* src/vgl-tray-icon.c
	Removed the show_app menu item
	(ctxt_menu_item_create): renamed in uimisc.c
	(ctxt_menu_create):
	Use the new ui_menu_item_create_from_icon

	* src/uimisc.c (ui_menu_item_create_from_icon):
	Added to generalize creating menu items for common actions

2008-11-01  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c
	(vgl_main_window_init, vgl_main_window_new): Set window type using
	a constructor property.

2008-11-01  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am (MAINTAINERCLEANFILES)
	* debian/control*
	* debian/rules:
	Switched to cdbs.

	* debian/changelog:
	Update with latest changes.

2008-10-17  Alberto Garcia  <agarcia@igalia.com>

	* po/es.po: Fixed Spanish translation

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am (MAINTAINERCLEANFILES): Remove vagalume.desktop.in

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* debian/control.*
	* Makefile.am
	* autogen.sh
	* configure.ac
	* data/vagalume.desktop.in.in
	* po/LINGUAS
	* po/POTFILES.in:
	Use intltool.
	Add translation support for the vagalume.desktop file.

2008-10-10  Alberto Garcia  <agarcia@igalia.com>

	* src/globaldefs.h
	* configure.ac:
	Add compatibility for GLib versions without
	g_timeout_add_seconds()

	* src/controller.c (controller_audio_started_cb):
	Use g_timeout_add_seconds()

2008-10-10  Alberto Garcia  <agarcia@igalia.com>
