@@ -1,5 +1,8 @@
 2008-11-08  Luca Bruno  <lethalman88@gmail.com>
 
+	* src/vgl-main-window.c (apply_icon_theme): parameter must be
+	GtkButton, not a generic GObject
+
 	* src/uimisc.c (ui_base_dialog): reorder actions as per HIG
 	(ui_usercfg_window): pack help button as secondary button
 
